# shadow-launcher-winold

./: .gitignore  .tmp_brace_diff.txt  BUILD_CLEAN_SAFE.md  CMakeLists.txt  LICENSE  PROJECT_INDEX.md  PROJECT_STATUS.md  README.md  build_log.txt  check_encryption.py  check_exe.py  check_exe2.py  convert_agreements.py  find_version.py  pack.ps1  qml-audit.js  refactor-style.js  ss-vision.js  temp_base.qml
cef_helper/: CMakeLists.txt  build_it.bat  helper_app.cpp.local  helper_app.h.local  helper_client.cpp.local  helper_client.h.local  main.cpp
cpp/src/multiplayer/: encrypted_addr.h
i18n/: shadow_zh_CN.ts  shadow_zh_HK.qm  shadow_zh_HK.ts  shadow_zh_TW.qm  shadow_zh_TW.ts
qml/: AgreementOverlay.qml  AnimationTokens.qml.local  BackgroundCropOverlay.qml  BetaKeyDialog.qml.local  ConfirmDialog.qml  CrashDialog.qml.local  DebugPanel.qml  DebugWindow.qml.local  DetailInfoCard.qml  DetailVersionCard.qml  DownloadPage.qml.local  DownloadProgressPage.qml  ExpandableGroupCard.qml  HomePage.qml  InlineToast.qml.local  InstallConfigOverlay.qml  InstallPage.qml  JavaPage.qml  KillButton.qml  LaunchOverlay.qml.local  MainWindow.qml.local  MinecraftHead2D.qml.local  MinecraftHead3D.qml.local  ModDetailPage.qml.local  ModLoaderCard.qml.local  ModpackImportOverlay.qml.local  MultiplayerPage.qml.local  ResourcePackDetailPage.qml.local  SettingsGeneralPage.qml.local  SettingsJavaPage.qml.local  SettingsMemoryPage.qml.local  SettingsMemorySection.qml.local  SettingsPage.qml  SettingsPage.qml.local  ShaderDetailPage.qml  ShaderDropdown.qml  ShadowButton.qml.local  SplashWindow.qml.local  StatsPage.qml.local  StyleTokens.qml  (+11 more)
qml/agreements/: beta_agreement.html  privacy_policy.html  terms_of_service.html
qml/icons/: README.md
qml/models/: alex.glb  steve.glb  steve_head.mtl
qml/wardrobe/: CapeCard.qml.local  SkinPreview3D.qml.local  WardrobePage.qml.local  WardrobeToast.qml.local  steve.glb
resources/: app.rc
scripts/: download_capes.py  test_fandom.py
src/: main.cpp  main.cpp.local
src/3d/: minecraft_box_geometry.cpp.local  minecraft_box_geometry.h.local
src/backend/: account_backend.cpp  account_backend.cpp.local  account_backend.h.local  app_backend.cpp  app_backend.h.local  check_backend.cpp  check_backend.h.local  debug_logger.cpp  debug_logger.h  java_backend.cpp  java_backend.h.local  launch_backend.cpp  launch_backend.h.local  resource_backend.cpp.local  resource_backend.h  settings_backend.cpp.local  settings_backend.h.local  shadow_backend.cpp  shadow_backend.cpp.local  shadow_backend.h.local  stats_backend.cpp  stats_backend.h.local  userdata_backend.cpp  userdata_backend.cpp.local  userdata_backend.h  version_backend.cpp  version_backend.cpp.local  version_backend.h
src/core/: cef_login_app.cpp.local  cef_login_app.h.local  crash_detector.cpp  crash_detector.h.local  download_coordinator.cpp.local  download_coordinator.h  downloader.cpp.local  downloader.h  file_downloader.cpp.local  file_downloader.h.local  geoip_service.cpp.local  geoip_service.h.local  http_client.cpp.local  http_client.h.local  icon_cache.cpp.local  icon_cache.h.local  launcher.cpp.local  launcher.h.local  local_mod_manager.cpp  local_mod_manager.h  logger.cpp  logger.h  mc_language.cpp.local  mc_language.h.local  microsoft_auth.cpp  microsoft_auth.cpp.local  microsoft_auth.h  microsoft_auth.h.local  mod_loader_installer.cpp.local  mod_loader_installer.h.local  mod_manager.cpp  mod_manager.h.local  modpack_importer.cpp.local  modpack_importer.h  parallel_downloader.cpp.local  parallel_downloader.h  progress_tracker.cpp.local  progress_tracker.h.local  screenshot_server.cpp.local  screenshot_server.h.local  (+10 more)
src/multiplayer/: connection_guard.cpp  connection_guard.h  easytier_process.cpp  easytier_process.h.local  encrypted_addr.h  encrypted_addr.h.local  encrypted_addr_local.h  encrypted_addr_local.h.local  multiplayer_manager.cpp.local  multiplayer_manager.h  relay_crypto.cpp  relay_crypto.cpp.local  relay_crypto.h  relay_crypto.h.local  room_code.cpp  room_code.h  scaffolding_protocol.cpp.local  scaffolding_protocol.h
src/utils/: logger.cpp  logger.h.local  token_crypto.cpp  token_crypto.h  types.h.local
src/utils/lzma/: LzmaDec.cxx  LzmaDec.h  Types.h.local
tests/: java_dl_test.cpp.local  speed_test.py
tools/: add_stats_nav.py  add_ui_logs.py  depcl.py  encrypt_addr.py  fix_label.py  fix_refs.py  fix_regex.py  fix_settings.py  fix_stats_nav.py  fix_stats_scan.py  rename_pcl.py  render_head_func.txt  translate_logs.py
update/: SLUpdater.cpp
